feat: binding-set model for measurement points (no main channel)
MeasurementPoint 不再有 channelId/address，全部绑定统一存 point_source 表
（bindings 数组，每点≥1条、绑定通道互不相同）。启动时 BindingMigration 把旧
channel_id/address 回填到 point_source 并删除旧列（幂等）。按通道筛选/显示
包含任意绑定通道；创建测点可关联既有测点（POST /api/points/{id}/bindings 加绑定）。
导入导出用 bindings 格式并兼容旧格式。前端测点页按通道组织创建/编辑绑定，
仪表盘显示全部数据+来源列并可切换每页条数，监控页保留来源通道。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>